# streamdeck-discordmixer

./: .gitmodules  CMakeLists.txt  DIAGNOSTICS.md  LICENSE.md  README.md  deploy.cmake
src/: actiontype.h  device.cpp  device.h  main.cpp  pch.cpp  pch.h  plugin.cpp  plugin.h  voice_state.cpp  voice_state.h
src/button/: button.cpp  button.h  button_back.cpp  button_back.h  button_deafen.cpp  button_deafen.h  button_microphone.cpp  button_microphone.h  button_open_mixer.cpp  button_open_mixer.h  button_page.cpp  button_page.h  button_user.cpp  button_user.h  button_user_related.cpp  button_user_related.h  button_volume.cpp  button_volume.h
